--- a/src/index.html
+++ b/src/index.html
@@ -5,32 +5,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Random Card Dealer</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
     integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-  <h1>Random Card Generator</h1>
-  <div class="container-fluid text-center card">
-
-    <div class="top">
-      <span id="top-suite" class="top-suite" ></span>
-      <span id="top-suite-number" class="top-suite-number"></span>
+<body onload="myFunction()">
+  <div class="container-fluid text-center p-3">
+    <h1 class="pb-2">Random Card Generator</h1>
+    <div class="card hearts shadow p-3 mb-5 bg-body">
+      <div class="middle">7</div>
     </div>
-
-    <div class="middle">
-      <span id="number" class="number"></span>
-    </div>
-
-
-    <div class="bottom">
-      <span id="bottom-suite" class="bottom-suite"></span>
-      <span id="bottom-suite-number" class="bottom-suite-number"></span>
-    </div>
-
   </div>
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
     crossorigin="anonymous"></script>
