--- a/src/index.html
+++ b/src/index.html
@@ -20,20 +20,20 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
 
-  <body>
+  <body onload="cardValue()">
     <div class="container-fluid p-3 text-center">
       <h1 class="pb-2">Random Card Generator</h1>
       <div class="card shadow p-3 mb-5 bg-body ">
         <div id="top">
-          <span class="value topNum">10</span>
+          <span class="value topNum"></span>
           <span class="suite top">♥</span>
         </div>
 
-        <div class="middle">10</div>
+        <div class="middle"></div>
 
         <div id="bottom">
-          <span class="suite bottom">♥</span>
-          <span class="value bottomNum">10</span>
+          <span class="suite2 bottom">♥</span>
+          <span class="value2 bottomNum"></span>
         </div>
       </div>
     </div>
